[package]
name = "liveshare"
version = "0.1.0"
authors = ["markrepedersen <markrepedersen@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
clap = "3.0.0-beta.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "0.3", features = ["rt", "net", "macros", "rt-multi-thread"] }