[package]
name = "liveshare"
version = "0.1.0"
authors = ["markrepedersen <markrepedersen@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
clap = "3.0.0-beta.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
tokio = { version = "0.3", features = [
  "rt",
  "net",
  "macros",
  "rt-multi-thread",
  "io-util"
] }
futures = "0.3"
flume = "0.9"
snafu = "0.6.9"
tracing = "0.1"
tracing-futures = "0.2.3"
